--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,13 @@
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
+/out-tsc
+/vendor
+/app/logs
 
 # dependencies
 /node_modules
+package-lock.json
 
 # profiling files
 chrome-profiler-events.json
@@ -41,6 +45,11 @@ yarn-error.log
 testem.log
 /typings
 
+# e2e
+/e2e/*.js
+/e2e/*.map
+
 # System Files
 .DS_Store
 Thumbs.db
+!.gitkeep
